@@ -6,3 +6,6 @@
 # Fixed Bugs:
 #           1. empty log file was created when "enable_log" was set to 'True' and "enable_file_log" was set to 'False'
 #           2. change variable naming conversion
+#           3. added additional validation for "source_folder", fixed bug if variable was set to None
+#           4. added path validation for source_folder
+#           5. added additional validation for "destination_folder", fixed bug if variable was set to None
